update dev conf